--- a/Style.css
+++ b/Style.css
@@ -1,11 +1,22 @@
-#Title {
+* {
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+.Title {
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-bottom: 5%;}
+#titleContainer {
+    height: 50%;
+    background-color: white;
+    border-radius: 0.5em;
+    width: 25%;
+    margin: auto;
 }
 .Subtitle {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
     color: grey;
+    width:100%;
 }
 header {
     background-color: rgb(200,200,200);
@@ -13,30 +24,60 @@ header {
     padding-top: 10%;
     padding-bottom: 10%;
     transition-duration: 1s;
+    -webkit-transition-duration: 1s;
     margin-bottom: 5%;
+    border-radius: 0.5em;
+    background-image: url('favicon.ico');
 }
 header:hover {
     box-shadow: 1em 1em grey;
 }
 nav {
     position: sticky;
+    top: 0;
+    display: block;
+    width: 90%;
+    height: 20%;
+    padding: 0.5em;
+    border-radius: 0.5em;
+    align-items: center;
+    border-width: 0.25em;
+    border-color: darkgray;
+    margin: auto;
+    background-color: grey;
 }
-nav li {
-    display: inline;
-    background-color: bisque;
+nav ul{
+    justify-content: space-around;
+    text-align: center;
+}
+nav ul li {
+    display: inline-block;
+    text-align: center;
+    background-color: gray;
+    transition-duration: 0.25s;
+    -webkit-transition-duration: 0.25s;
+    border-radius: 0.5em;
+    width: 20%;
+}
+nav ul li:hover {
+    background-color: lightgray;
 }
 a {
-    text-decoration: none;
-    width:100%;
-    height: 100%;
-    display: block;
+    text-decoration: none; 
     text-align: center;
     color: white;
     font-size: large;
+    font-weight: 700;
+}
+button a {
+    width:100%;
+    height: 100%;
+    display: block;
 }
 button {
     Background-color: grey;
     transition-duration: 0.25s;
+    -webkit-transition-duration: 0.25s;
     margin: auto;
     display: block;
     width: 10em;
