--- a/Style.css
+++ b/Style.css
@@ -4,59 +4,64 @@
 }
 .Title {
     text-align: center;
-    margin-bottom: 5%;}
+    margin-bottom: 5%;
+    font-weight: bold;}
 #titleContainer {
-    height: 50%;
-    background-color: white;
+    height: 90%;
+    /*background-color: white;*/
     border-radius: 0.5em;
-    width: 25%;
+    width: 50%;
     margin: auto;
 }
 .Subtitle {
     text-align: center;
-    color: grey;
+    color: rgb(60, 60, 60);
     width:100%;
+    font-weight: bold;
 }
 header {
     background-color: rgb(200,200,200);
-    box-shadow: 0.5em 0.5em grey;
     padding-top: 10%;
     padding-bottom: 10%;
-    transition-duration: 1s;
-    -webkit-transition-duration: 1s;
+    width: 100%;
+    height: 75%;
     margin-bottom: 5%;
-    border-radius: 0.5em;
-    background-image: url('favicon.ico');
-}
-header:hover {
-    box-shadow: 1em 1em grey;
+    background-image: url('Background.jpg');
+    background-size: cover; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 nav {
     position: sticky;
     top: 0;
-    display: block;
-    width: 90%;
-    height: 20%;
+    width: 100%;
+    height: 75px;
     padding: 0.5em;
-    border-radius: 0.5em;
-    align-items: center;
     border-width: 0.25em;
     border-color: darkgray;
     margin: auto;
     background-color: grey;
 }
 nav ul{
-    justify-content: space-around;
-    text-align: center;
+    margin: auto;
+    padding: 0;
+    height: 100%;
 }
 nav ul li {
+    margin: auto;
+    padding:0;
     display: inline-block;
     text-align: center;
     background-color: gray;
+    top: 0;
     transition-duration: 0.25s;
     -webkit-transition-duration: 0.25s;
-    border-radius: 0.5em;
+    -o-transition-duration: 0.25s;
+    -moz-transition-duration: 0.25;
+    border-radius: 0.25em;
     width: 20%;
+    height: 100%;
 }
 nav ul li:hover {
     background-color: lightgray;
@@ -67,21 +72,27 @@ a {
     color: white;
     font-size: large;
     font-weight: 700;
-}
-button a {
     width:100%;
     height: 100%;
     display: block;
 }
+button a {
+    color: black;
+    borer:none;
+}
 button {
-    Background-color: grey;
+    Background-color: white;
+    border-color: green;
     transition-duration: 0.25s;
     -webkit-transition-duration: 0.25s;
+    -o-transition-duration: 0.25s;
+    -moz-transition-duration: 0.25;
+    border-radius: 0.5em;
+    border: 0.25em green solid;
     margin: auto;
     display: block;
     width: 10em;
     height: 5em;
-    border-radius: 0.5em;
 }
 button:Hover {
     background-color: lightgray;
